fix: add flex alignment

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1380,6 +1380,7 @@ body {
 .projects {
     overflow: hidden;
     &__inner {
+        flex: 1 1 auto;
         padding: 60px 0;
         display: flex;
         flex-direction: column;
@@ -1628,6 +1629,7 @@ body {
 
 .contact {
     &__inner {
+        flex: 1 1 auto;
         padding: 60px 0;
         display: flex;
         flex-direction: column;
